# eoapi-risk

./: .gitignore  README.md
.github/workflows/: gcr-cleanup.yaml  helm.yaml  ingest-docker-build.yaml  trigger-ingest-job-maxar-opendata.yaml
deploy/helm/eoapi/: values.yaml
deploy/helm/jupyterhub/: values.yaml
deploy/k8s/: project-contact.yaml
ingest/: .env.example  .gitignore  Dockerfile  config.py  docker-compose.yaml  entrypoint.py  entrypoint.sh  job.yaml  requirements.txt
ingest/datasets/: utils.py
ingest/datasets/admin_boundaries/: README.md  collection.json  job.yaml  process.py  process.sh
ingest/datasets/admin_boundaries/src/: admin_boundaries.py  run.py
ingest/datasets/buildings/: README.md  collection.json  job.yaml  process.py
ingest/datasets/buildings/src/: buildings.py  run.py
ingest/datasets/health_facilities/: README.md  collection.json  job.yaml  process.py
ingest/datasets/health_facilities/src/: health_facilities.py  run.py
ingest/datasets/maxar_opendata/: README.md  collection.json  job.yaml  process.py
ingest/datasets/population/: README.md  collection.json  job.yaml  process.py  process.sh
ingest/datasets/shakemap_peak/: collection.json  process.py
notebooks/: README.md  admin-search.ipynb  afg-earthquake-22-vector.ipynb  afg-earthquake-22.ipynb  afg-eartquake-22-vector.ipynb  getting-started.ipynb  heat-exposure-forecast.ipynb  planet_swarm  pyproject.toml  sample.ipynb  satellite-location.ipynb  sentinel_2b  test-collections.ipynb
notebooks/satellites/: requirements.txt  satellite-location.ipynb
(+4 files in other folders)
